[package]
name = "sparse_vec"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Atilogit/sparse_vec"
description = "Datastructure that stores separate but contiguous ranges of values efficiently"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
rangemap = "1.3"

[dev-dependencies]
rand = "0.8"
